# perception-frame_helper

./: .gitignore  CMakeLists.txt  manifest.xml
bindings/ruby/: CMakeLists.txt  FrameHelperRice.cpp  generate.rb  rbind.rb  test.rb  types.txt
bindings/ruby/lib/: frame_helper.rb
bindings/ruby/lib/frame_helper/: frame_helper_typelib.rb
bindings/ruby/src/: CMakeLists.txt
cmake/: CommonSetup.cmake
src/: BrightnessIndicator.cpp  BrightnessIndicator.h  CMakeLists.txt  Calibration.cpp  Calibration.h  CalibrationCv.cpp  CalibrationCv.h  ColorGradient.cpp  ColorGradient.h  ColorGradientTypes.h  ExposureController.cpp  ExposureController.h  FrameHelper.cpp  FrameHelper.h  FrameHelperTypes.h  FrameQImageConverter.h
test/: CMakeLists.txt  calib.txt  test_suite.cpp
