if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src)
    execute_process(COMMAND ruby ${CMAKE_CURRENT_SOURCE_DIR}/generate.rb)
ENDIF()
add_subdirectory(src)

FIND_PACKAGE(Ruby)
IF(NOT RUBY_INCLUDE_PATH)
    MESSAGE(STATUS "Ruby library not found. Cannot install Ruby extensions")
ELSEIF(NOT RUBY_EXTENSIONS_AVAILABLE)
    STRING(REGEX REPLACE ".*lib(32|64)?/?" "lib/" RUBY_LIBRARY_INSTALL_DIR ${RUBY_RUBY_LIB_PATH})

    FIND_PROGRAM(RDOC_EXECUTABLE NAMES rdoc1.9 rdoc1.8 rdoc)
    FIND_PROGRAM(YARD_EXECUTABLE NAMES yard)

    INSTALL(FILES lib/frame_helper.rb
        DESTINATION ${RUBY_LIBRARY_INSTALL_DIR})
    INSTALL(DIRECTORY lib/frame_helper
        DESTINATION ${RUBY_LIBRARY_INSTALL_DIR})
ENDIF(NOT RUBY_INCLUDE_PATH)
